--- a/google.html
+++ b/google.html
@@ -1,6 +1,9 @@
+
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel ="stylesheet" href="./google.css">
         <title>pretending to be google</title>
     </head>
     <body>
@@ -20,8 +23,8 @@
             </table>
         </div>
         <div class="middle">
-            <div class="logo"><img  src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"> </div>
-            <div class="search_bar"><input type="text"></input>  </div>
+            <div class="logo"><img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"> </div>
+            <div><input type="text"></input>  </div>
             <div class="lucky_table">
                 <table>
                     <tr>
