--- a/google.html
+++ b/google.html
@@ -28,8 +28,8 @@
             <div class="lucky_table">
                 <table>
                     <tr>
-                        <td> <button>Google Search</button></td>
-                        <td> <button>I'm Feeling Lucky</button></td>
+                        <td class="lucky_table_col"> <button class="button_left">Google Search</button></td>
+                        <td class="lucky_table_col"> <button>I'm Feeling Lucky</button></td>
                     </tr>
                 </table>
             </div>
@@ -41,6 +41,7 @@
                     <td><a href="https://www.google.com/intl/en_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></td>
                     <td><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></td>
                     <td><a href="https://www.google.com/intl/en_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a></td>
+                    <td class="middle_cell"></td>
                     <td class="right"><a href="https://support.google.com/websearch?p=fr_consumer_info&hl=en-FR&fg=1">Consumer information</a></td>
                     <td class="right"><a href="https://www.google.com/intl/en_fr/policies/privacy/?fg=1">Privacy</a></td>
                     <td class="right"><a href="https://www.google.com/intl/en_fr/policies/terms/?fg=1">Terms</a></td>
