--- a/google.html
+++ b/google.html
@@ -26,26 +26,24 @@
             <div class="logo"><img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"> </div>
             <div><input type="text"></input>  </div>
             <div class="lucky_table">
-                <table>
-                    <tr>
-                        <td class="lucky_table_col"> <button class="button_left">Google Search</button></td>
-                        <td class="lucky_table_col"> <button>I'm Feeling Lucky</button></td>
-                    </tr>
-                </table>
+                <div class="luck" ><button class="button_left">Google Search</button></div>
+                <div class="luck" ><button>I'm Feeling Lucky</button></div>
             </div>
         </div>
         <div class="bottom">
             <table>
-                <tr></tr>
                 <tr>
-                    <td><a href="https://www.google.com/intl/en_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></td>
-                    <td><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></td>
-                    <td><a href="https://www.google.com/intl/en_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a></td>
+                    <td>France</td>
+                </tr>
+                <tr>
+                    <td><a class="bottom_link" href="https://www.google.com/intl/en_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></td>
+                    <td><a class="bottom_link" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></td>
+                    <td><a class="bottom_link" href="https://www.google.com/intl/en_fr/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a></td>
                     <td class="middle_cell"></td>
-                    <td class="right"><a href="https://support.google.com/websearch?p=fr_consumer_info&hl=en-FR&fg=1">Consumer information</a></td>
-                    <td class="right"><a href="https://www.google.com/intl/en_fr/policies/privacy/?fg=1">Privacy</a></td>
-                    <td class="right"><a href="https://www.google.com/intl/en_fr/policies/terms/?fg=1">Terms</a></td>
-                    <td class="right"><a href="https://www.google.com/preferences?hl=en">Settings</a></td>
+                    <td ><a class="bottom_link" href="https://support.google.com/websearch?p=fr_consumer_info&hl=en-FR&fg=1">Consumer information</a></td>
+                    <td ><a class="bottom_link" href="https://www.google.com/intl/en_fr/policies/privacy/?fg=1">Privacy</a></td>
+                    <td ><a class="bottom_link" href="https://www.google.com/intl/en_fr/policies/terms/?fg=1">Terms</a></td>
+                    <td ><a class="bottom_link" href="https://www.google.com/preferences?hl=en">Settings</a></td>
                 </tr>
             </table>
         </div>
