--- a/google.html
+++ b/google.html
@@ -26,8 +26,10 @@
             <div class="logo"><img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"> </div>
             <div><input type="text"></input>  </div>
             <div class="lucky_table">
-                <div class="luck" ><button class="button_left">Google Search</button></div>
-                <div class="luck" ><button>I'm Feeling Lucky</button></div>
+                <!-- <div class="luck" ><button class="button_left">Google Search</button></div>
+                <div class="luck" ><button>I'm Feeling Lucky</button></div> -->
+                <button class="button_left">Google Search</button>
+                <button>I'm Feeling Lucky</button>
             </div>
         </div>
         <div class="bottom">
