improved search bar

--- a/google.html
+++ b/google.html
@@ -24,7 +24,7 @@
         </div>
         <div class="middle">
             <div class="logo"><img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"> </div>
-            <div><input type="text"></input>  </div>
+            <div class="search"><input type="text"></input>  </div>
             <div class="lucky_table">
                 <!-- <div class="luck" ><button class="button_left">Google Search</button></div>
                 <div class="luck" ><button>I'm Feeling Lucky</button></div> -->
@@ -33,9 +33,9 @@
             </div>
         </div>
         <div class="bottom">
-            <table>
-                <tr>
-                    <td>France</td>
+            <table class="bottom_table">
+                <tr class="line">
+                    <td class="bottom_link">France</td>
                 </tr>
                 <tr>
                     <td><a class="bottom_link" href="https://www.google.com/intl/en_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></td>
