--- a/google.html
+++ b/google.html
@@ -8,19 +8,12 @@
     </head>
     <body>
         <div class="top">
-            <table>
-                <tr>
-                    <td><a href="https://mail.google.com/mail/?tab=wm">Gmail</a></td>
-                    <td><a href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a></td>
-                    <td><a href="https://www.google.fr/intl/fr/options/"></td>
-                    <td>
+                    <a href="https://mail.google.com/mail/?tab=wm">Gmail</a>
+                    <a href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a>
+                    <a href="https://www.google.fr/intl/fr/options/"></a> 
                         <div class="notif_circle">
                             <!-- put that as background of the circle and position it right to have only the bell <img src="https://ssl.gstatic.com/gb/images/i2_2ec824b0.png"> -->
                         </div>
-                    </td>
-                    <td></td>
-                </tr>
-            </table>
         </div>
         <div class="middle">
             <div class="logo"><img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png"> </div>
